# EduBuddy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: build.sh  config.sh  deploy.conf  deploy.sh  install.sh  service.sh  uninstall.sh  version.py
src/edubuddy/: __init__.py  cli.py  logger.py  realtime_agent.py  time_service.py  version.py
tests/: __init__.py  test_logger.py  test_version.py
