[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edubuddy"
dynamic = ["version"]
description = "EduBuddy - 教育助手应用"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mason", email = "mason@example.com"},
]
keywords = ["education", "assistant", "logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru>=0.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
edubuddy = "edubuddy.cli:main"

[project.urls]
Homepage = "https://github.com/mason/edubuddy"
Repository = "https://github.com/mason/edubuddy.git"
Issues = "https://github.com/mason/edubuddy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/edubuddy"]

[tool.hatch.version]
path = "src/edubuddy/version.py"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]